Bug 67517 - [HSW mobile S3/S4 Bisected] Resume from S3 or S4, dmesg with "[drm:hsw_unclaimed_reg_check] *ERROR* Unclaimed write to 41000"
Summary: [HSW mobile S3/S4 Bisected] Resume from S3 or S4, dmesg with "[drm:hsw_unclai...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium major
Assignee: Paulo Zanoni
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-30 04:21 UTC by shui yangwei
Modified: 2017-10-06 14:44 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg: S3 resume with error (113.60 KB, text/plain)
2013-07-30 04:21 UTC, shui yangwei
no flags Details

Description shui yangwei 2013-07-30 04:21:41 UTC
Created attachment 83263 [details]
dmesg: S3 resume with error

Environment:
---------------------
Kernel: (drm-intel-next-queued)fae5cbff3e3e4097de2e76178d462b90626c2bdb
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Sun Jul 21 21:37:09 2013 +0200

    drm/i915: clean up crtc timings computation

HSW mobile msi product:
MSI Haswell Notebook MSI MS-16GC Notebook 15.6
Host bridge ID=0x0c04 (rev 06);
VGA ID=0x0416 (rev06)
CPU: i7-4700MQ 2.4GHz; 
BIOS: E16GCIMS.509 (04/24/2013) 
EC: 16GCEMS1 ver5.00 (04/12/2013);
ME: 9.0.2.1345;

Description:
--------------------
Test S3 with latest -next-queued kernel, there's drm error in dmesg:
[   66.639759] [drm:hsw_unclaimed_reg_check] *ERROR* Unclaimed write to 41000
[   66.639769] [drm:intel_uncore_check_errors] *ERROR* Unclaimed register before interrupt

There's some ACPI and ALSA error,it's not our bug, and we have reported it in Bug #66240.

I also test another HSW acer product, there's not this issue, but there's call trace when resume from S3, you can see the status in Bug #64379.

Reproduce step:
--------------------
1. boot machine up
2. S3
3. check dmesg

Bisect result:
--------------------
bf51d5e2cda5d36d98e4b46ac7fca9461e512c41 is the first bad commit
commit bf51d5e2cda5d36d98e4b46ac7fca9461e512c41
Author: Paulo Zanoni <paulo.r.zanoni@intel.com>
Date:   Wed Jul 3 17:12:13 2013 -0300

    drm/i915: switch disable_power_well default value to 1

    Now that the audio driver is using our power well API, everything
    should be working correctly, so let's give it a try.
Comment 1 shui yangwei 2013-07-30 05:57:29 UTC
S4 also have this issue and the first bad is the same with S3.
Comment 2 Paulo Zanoni 2013-07-30 14:39:24 UTC
Hi

Does the following patch fix the bug?
http://lists.freedesktop.org/archives/intel-gfx/2013-June/028688.html

Thanks,
Paulo
Comment 3 shui yangwei 2013-07-31 01:29:29 UTC
(In reply to comment #2)
> Hi
> 
> Does the following patch fix the bug?
> http://lists.freedesktop.org/archives/intel-gfx/2013-June/028688.html
> 
> Thanks,
> Paulo

The errors disappeared on the kernel which appended this patch.
Comment 4 shui yangwei 2013-07-31 06:26:06 UTC
(In reply to comment #2)
> Hi
> 
> Does the following patch fix the bug?
> http://lists.freedesktop.org/archives/intel-gfx/2013-June/028688.html
> 
> Thanks,
> Paulo

Yes, it fixes, if the patch landed to our latest kernel, we can close it.
Comment 5 Daniel Vetter 2013-08-04 21:22:32 UTC
Patch needs a notch more work ...
Comment 6 Paulo Zanoni 2013-08-14 16:18:56 UTC
An equivalent patch was merged: "drm/i915: check the power well when redisabling VGA".

http://cgit.freedesktop.org/~danvet/drm-intel/commit/?h=drm-intel-next-queued&id=74ed0b270d3111475b38b138cf88a857d10924af

Closing bug. If it still happens, please reopen it.

Thanks,
Paulo
Comment 7 Elizabeth 2017-10-06 14:44:29 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.